feat(maintenance): 添加追溯影响分析和计费生命周期适配器
- 新增 AbstractRetroactiveImpactSourceAdapter 抽象类用于四域追溯取证适配器的响应校验
- 添加 AddMaintenanceItemCommand 记录用于向保全案件添加版本化保全项
- 创建 AnalyzeMaintenanceRetroactiveImpactDTO 和 ApplyMaintenanceEffectDTO 数据传输对象
- 添加 AutomaticMaintenanceReviewDTO 用于自动审核外部证据摘要
- 实现 BillingPremiumLifecycleAdapter 防腐适配器处理计费生命周期余额端口
- 新增 BillingRetroactiveImpactClient 和 BillingRetroactiveImpactSourceAdapter 处理账单追溯影响
- 添加 BillingRetroactivePeriodAdjustmentAdapter 处理追溯期间调整正式契约
- 在 application.yml 中添加维护模块配置和灰度回滚开关
- 实现 BillingPremiumLifecyclePort 接口定义计费生命周期余额事实端口
- 添加相应的单元测试类验证适配器功能